# shekyl-core

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  LICENSE.md  Makefile  README.md  baseline.iai.snapshot  baseline.json  vcpkg.json
rust/: Cargo.toml  audit.toml  rustfmt.toml
rust/.cargo/: audit.toml
rust/randomx-v2-sys/: Cargo.toml  README.md  build.rs
rust/randomx-v2-sys/src/: lib.rs
rust/shekyl-address/: Cargo.toml
rust/shekyl-address/src/: address.rs  lib.rs  multisig_address.rs  network.rs
rust/shekyl-chacha/: Cargo.toml
rust/shekyl-chacha/src/: lib.rs
rust/shekyl-chacha/tests/: cache_crypto.rs
rust/shekyl-cli/: Cargo.toml
rust/shekyl-cli/src/: commands.rs  daemon.rs  display.rs  engine.rs  errors.rs  main.rs  resolve.rs  session.rs  validate.rs  wallet.rs
rust/shekyl-consensus/: Cargo.toml
rust/shekyl-consensus/src/: error.rs  lib.rs  proof.rs  randomx.rs  registry.rs  types.rs
rust/shekyl-crypto-hash/: Cargo.toml
rust/shekyl-crypto-hash/src/: lib.rs
rust/shekyl-crypto-pq/: Cargo.toml
rust/shekyl-crypto-pq/benches/: pqc_rederivation.rs
rust/shekyl-crypto-pq/examples/: gen_genesis_addrs.rs  pqc_vector_dump.rs
rust/shekyl-crypto-pq/fuzz/: Cargo.toml
rust/shekyl-crypto-pq/src/: account.rs  address.rs  bip39.rs  derivation.rs  error.rs  handle.rs  kem.rs  key_image.rs  keys.rs  label.rs  lib.rs  montgomery.rs  multisig.rs  multisig_receiving.rs  output.rs  signature.rs  subaddress.rs  wallet_envelope.rs  wallet_state.rs
rust/shekyl-crypto-pq/tests/: negative_vectors.rs  prop_round_trip.proptest-regressions  prop_round_trip.rs  recover_combined_ss.rs  sha3_zeroize_feature.rs
rust/shekyl-daemon-rpc/: Cargo.toml
rust/shekyl-daemon-rpc/src/: core.rs  ffi.rs  ffi_exports.rs  lib.rs  main.rs  middleware.rs  server.rs  types.rs
rust/shekyl-difficulty/: Cargo.toml  build.rs
rust/shekyl-difficulty/src/: consts.rs  error.rs  lib.rs  lwma1.rs  timestamp.rs
rust/shekyl-difficulty/tests/: edge_cases.rs  spec_vectors.rs
rust/shekyl-economics/: Cargo.toml  build.rs
rust/shekyl-economics-sim/: Cargo.toml
rust/shekyl-economics-sim/src/: engine.rs  main.rs  record.rs  scenarios.rs
rust/shekyl-economics/src/: activity.rs  burn.rs  digest.rs  emission.rs  emission_share.rs  lib.rs  params.rs  release.rs
rust/shekyl-encoding/: Cargo.toml
rust/shekyl-encoding/src/: lib.rs
rust/shekyl-engine-core/: Cargo.toml  build.rs
rust/shekyl-engine-core/benches/: engine_trait_bench_economics_base_emission_at.rs  engine_trait_bench_economics_base_emission_at_iai.rs  engine_trait_bench_economics_parameters_snapshot.rs  engine_trait_bench_economics_parameters_snapshot_iai.rs  engine_trait_bench_key_account_public_address.rs  engine_trait_bench_key_account_public_address_iai.rs  engine_trait_bench_key_dispatch.rs  engine_trait_bench_key_dispatch_baseline_iai.rs  engine_trait_bench_key_merge_projection.rs  engine_trait_bench_key_merge_projection_iai.rs  engine_trait_bench_ledger_balance.rs  engine_trait_bench_ledger_balance_iai.rs  engine_trait_bench_ledger_synced_height.rs  engine_trait_bench_ledger_synced_height_iai.rs  multisig_v31.rs  refresh_snapshot.rs
rust/shekyl-engine-core/fuzz/: Cargo.toml
rust/shekyl-engine-core/src/: claim_builder.rs  error.rs  lib.rs  scan.rs  tests.rs  workflow.rs
rust/shekyl-engine-file/: Cargo.toml
rust/shekyl-engine-file/benches/: open.rs  open_iai.rs
rust/shekyl-engine-file/src/: atomic.rs  capability.rs  error.rs  handle.rs  lib.rs  lock.rs  overrides.rs  paths.rs  payload.rs  secrets_transitional.rs
rust/shekyl-engine-file/tests/: adversarial_corpus.rs
rust/shekyl-engine-prefs/: Cargo.toml
rust/shekyl-engine-prefs/src/: hmac_key.rs  io.rs  lib.rs  paths.rs
rust/shekyl-engine-rpc/: Cargo.toml
rust/shekyl-engine-rpc/src/: engine.rs  ffi.rs  handlers.rs  lib.rs  main.rs  multisig_handlers.rs  server.rs
rust/shekyl-engine-state/: .zeroize-allowlist  Cargo.toml
rust/shekyl-engine-state/benches/: balance.rs  balance_iai.rs  ledger.rs  ledger_iai.rs
rust/shekyl-engine-state/fuzz/: Cargo.toml  README.md
rust/shekyl-engine-state/schemas/: bookkeeping_block.snap  ledger_block.snap  sync_state_block.snap  tx_meta_block.snap  wallet_ledger.snap
rust/shekyl-engine-state/src/: bookkeeping_block.rs  invariants.rs  ledger_block.rs  ledger_indexes.rs  lib.rs  local_label.rs  payment_id.rs  safety_constants.rs  schema_snapshot.rs  serde_helpers.rs  staker_pool.rs  subaddress.rs  transfer.rs  tx_meta_block.rs  wallet_ledger.rs
rust/shekyl-engine-state/tests/: fuzz_region2.rs
rust/shekyl-fcmp/: Cargo.toml
rust/shekyl-fcmp/fuzz/: Cargo.toml
rust/shekyl-fcmp/src/: frost_dkg.rs  frost_sal.rs  leaf.rs  lib.rs  proof.rs  tree.rs
rust/shekyl-ffi/: Cargo.toml
rust/shekyl-ffi/src/: account_ffi.rs  difficulty_ffi.rs  engine_file_ffi.rs  lib.rs  wallet_envelope_ffi.rs  wallet_file_ffi.rs  wallet_ledger_ffi.rs
rust/shekyl-ffi/tests/: cache_ffi_round_trip.rs  signing_round_trip.rs
rust/shekyl-logging/: Cargo.toml  README.md
rust/shekyl-logging/src/: appender.rs  config.rs  ffi.rs  filter.rs  legacy.rs  lib.rs
rust/shekyl-logging/tests/: c_ffi.rs  chmod_symlink_safety.rs  defaults.rs  env_filter.rs  file_sink.rs  presets.rs  reserved_names.rs  trybuild.rs
rust/shekyl-oxide/: UPSTREAM_MONERO_OXIDE_COMMIT
rust/shekyl-oxide/shekyl-oxide/: Cargo.toml  README.md
rust/shekyl-pow-randomx/: BENCH_RESULTS.md  Cargo.toml
rust/shekyl-pow-randomx/benches/: cache_derive.rs  compute_hash_alloc.rs  per_call_alloc.rs
rust/shekyl-pow-randomx/src/: aes.rs  argon2d.rs  blake2_generator.rs  cache.rs  (+8 more)
rust/shekyl-proofs/: Cargo.toml
rust/shekyl-randomx-differential/: Cargo.toml  README.md
rust/shekyl-scanner/: Cargo.toml  README.md
rust/shekyl-shard-visual/: Cargo.toml
rust/shekyl-staking/: Cargo.toml  build.rs
rust/shekyl-tx-builder/: Cargo.toml
rust/shekyl-wallet-core/: Cargo.toml
rust/shekyl-wallet-file/: Cargo.toml
rust/shekyl-wallet-prefs/: Cargo.toml
rust/shekyl-wallet-rpc/: Cargo.toml
rust/shekyl-wallet-state/: .zeroize-allowlist  Cargo.toml
(+1264 files in other folders)
