[workspace]
members = [
    "shekyl-ffi",
    "shekyl-fcmp",
    "shekyl-chacha",
    "shekyl-crypto-pq",
    "shekyl-crypto-hash",
    "shekyl-consensus",
    "shekyl-economics",
    "shekyl-staking",
    "shekyl-economics-sim",
    "shekyl-wallet-rpc",
    "shekyl-tx-builder",
    "shekyl-daemon-rpc",
    "shekyl-encoding",
    "shekyl-address",

    # Vendored monero-oxide protocol crates
    "shekyl-oxide/crypto/helioselene",
    "shekyl-oxide/crypto/divisors",
    "shekyl-oxide/crypto/generalized-bulletproofs",
    "shekyl-oxide/crypto/fcmps/circuit-abstraction",
    "shekyl-oxide/crypto/fcmps/ec-gadgets",
    "shekyl-oxide/crypto/fcmps",
    "shekyl-oxide/shekyl-oxide/io",
    "shekyl-oxide/shekyl-oxide/generators",
    "shekyl-oxide/shekyl-oxide/primitives",
    "shekyl-oxide/shekyl-oxide/fcmp/bulletproofs",
    "shekyl-oxide/shekyl-oxide/fcmp/fcmp++",
    "shekyl-oxide/shekyl-oxide",
    "shekyl-oxide/shekyl-oxide/rpc",
    "shekyl-oxide/shekyl-oxide/rpc/simple-request",

    # Shekyl-native scanner crate
    "shekyl-scanner",

    # V3 proof protocol (tx_proof, reserve_proof)
    "shekyl-proofs",

    # Shekyl wallet core: transaction builders
    "shekyl-wallet-core",

    # Interactive CLI wallet (replacement for simplewallet)
    "shekyl-cli",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/radawson/Shekyl"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }

# Compile crypto-heavy crates with optimizations even in dev
[profile.dev.package]
subtle = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ff = { opt-level = 3 }
group = { opt-level = 3 }
crypto-bigint = { opt-level = 3 }
dalek-ff-group = { opt-level = 3 }
helioselene = { opt-level = 3 }
multiexp = { opt-level = 3 }
ec-divisors = { opt-level = 3 }
generalized-bulletproofs = { opt-level = 3 }
generalized-bulletproofs-circuit-abstraction = { opt-level = 3 }
generalized-bulletproofs-ec-gadgets = { opt-level = 3 }
full-chain-membership-proofs = { opt-level = 3 }
shekyl-io = { opt-level = 3 }
shekyl-generators = { opt-level = 3 }
shekyl-primitives = { opt-level = 3 }
shekyl-bulletproofs = { opt-level = 3 }
shekyl-fcmp-plus-plus = { opt-level = 3 }
shekyl-oxide = { opt-level = 3 }

[profile.dev]
panic = "abort"
overflow-checks = true
[profile.release]
panic = "abort"
overflow-checks = true
[profile.test]
overflow-checks = true
[profile.bench]
overflow-checks = true

[workspace.lints.clippy]
incompatible_msrv = "allow"
unwrap_or_default = "allow"
map_unwrap_or = "allow"
borrow_as_ptr = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_ptr_alignment = "deny"
cast_sign_loss = "deny"
checked_conversions = "deny"
cloned_instead_of_copied = "deny"
enum_glob_use = "deny"
expl_impl_clone_on_copy = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
flat_map_option = "deny"
float_cmp = "deny"
fn_params_excessive_bools = "deny"
ignored_unit_patterns = "deny"
implicit_clone = "deny"
inefficient_to_string = "deny"
invalid_upcast_comparisons = "deny"
large_stack_arrays = "deny"
linkedlist = "deny"
macro_use_imports = "deny"
manual_instant_elapsed = "deny"
manual_let_else = "deny"
manual_ok_or = "deny"
manual_string_new = "deny"
match_bool = "deny"
match_same_arms = "deny"
missing_fields_in_debug = "deny"
needless_pass_by_value = "deny"
ptr_cast_constness = "deny"
range_minus_one = "deny"
range_plus_one = "deny"
redundant_closure_for_method_calls = "deny"
redundant_else = "deny"
string_add_assign = "deny"
unchecked_time_subtraction = "deny"
uninlined_format_args = "deny"
unnecessary_box_returns = "deny"
unnecessary_join = "deny"
unnecessary_wraps = "deny"
unnested_or_patterns = "deny"
unused_async = "deny"
unused_self = "deny"
zero_sized_map_values = "deny"
