[workspace]
members = [
    "shekyl-ffi",
    "shekyl-fcmp",
    "shekyl-chacha",
    "shekyl-crypto-pq",
    "shekyl-crypto-hash",
    "shekyl-consensus",
    "shekyl-economics",
    "shekyl-staking",
    "shekyl-economics-sim",
    "shekyl-engine-rpc",
    "shekyl-tx-builder",
    "shekyl-daemon-rpc",
    "shekyl-encoding",
    "shekyl-address",
    "shekyl-difficulty",

    # Vendored monero-oxide protocol crates
    "shekyl-oxide/crypto/helioselene",
    "shekyl-oxide/crypto/divisors",
    "shekyl-oxide/crypto/generalized-bulletproofs",
    "shekyl-oxide/crypto/fcmps/circuit-abstraction",
    "shekyl-oxide/crypto/fcmps/ec-gadgets",
    "shekyl-oxide/crypto/fcmps",
    "shekyl-oxide/shekyl-oxide/io",
    "shekyl-oxide/shekyl-oxide/generators",
    "shekyl-oxide/shekyl-oxide/primitives",
    "shekyl-oxide/shekyl-oxide/fcmp/bulletproofs",
    "shekyl-oxide/shekyl-oxide/fcmp/fcmp++",
    "shekyl-oxide/shekyl-oxide",
    "shekyl-oxide/shekyl-oxide/rpc",
    "shekyl-oxide/shekyl-oxide/rpc/simple-request",

    # Shekyl-native scanner crate
    "shekyl-scanner",

    # Canonical engine state types (transfers, runtime state, staker pool)
    "shekyl-engine-state",

    # v1 two-file wallet envelope orchestrator (.wallet.keys + .wallet)
    "shekyl-engine-file",

    # Plaintext-with-HMAC user preferences (layer 2 of WALLET_PREFS.md)
    "shekyl-engine-prefs",

    # V3 proof protocol (tx_proof, reserve_proof)
    "shekyl-proofs",

    # Shekyl engine core: orchestrator and transaction builders
    "shekyl-engine-core",

    # Interactive CLI engine (replacement for simplewallet)
    "shekyl-cli",

    # Unified tracing-based logger init for all Rust binaries
    "shekyl-logging",

    # Pure-software RandomX v2 verifier (docs/design/RANDOMX_V2_PLAN.md,
    # RANDOMX_V2_RUST.md). Consumed by shekyl-ffi (Phase 3); not the miner.
    "shekyl-pow-randomx",
]
# Local-only harnesses that must not participate in the parent
# workspace. Excluded here (rather than relying on the nested
# `[workspace]` table inside each one) so that `cargo check
# --workspace` on stable never tries to resolve libfuzzer-sys, which
# only builds under `cargo +nightly fuzz build`. Hardening-pass
# commit 8 (`docs/MID_REWIRE_HARDENING.md` §3.8).
exclude = [
    "shekyl-engine-state/fuzz",
]
resolver = "2"

[workspace.package]
version = "3.1.0"
edition = "2021"
# MSRV pinned for `aes = "0.9"` (edition 2024). Per
# `RANDOMX_V2_PHASE2B_PLAN.md` §9: locking the pin produces a clean
# "your rustc is too old" message from cargo rather than a cryptic
# compile failure deep in the dependency graph. The Guix substrate
# does not exist today per `RANDOMX_V2_RUST.md` §22 ("forward work");
# when Guix lands, its rustc must already be ≥ 1.85 to build this
# workspace.
rust-version = "1.85"
license = "BSD-3-Clause"
repository = "https://github.com/radawson/Shekyl"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }

# RandomX v2 verifier primitives (Phase 2b). Both verified at source
# in `RANDOMX_V2_PHASE2B_PLAN.md` §4 and §5.6.
#
# `aes` provides the `hazmat::cipher_round` / `equiv_inv_cipher_round`
# round primitives for AesGenerator1R/4R and AesHash1R per `specs.md`
# §§3.2-3.4. The `hazmat` feature gates the single-round API per
# `aes-0.9.0/Cargo.toml:43-44`; without it the API is unreachable.
# Soft fallback is constant-time fixslicing per `aes-0.9.0/src/lib.rs:20-22`
# (not load-bearing for RandomX since the "keys" are public, but
# strictly better than `soft_aes.cpp`'s LUT path).
aes = { version = "0.9", default-features = false, features = ["hazmat"] }
#
# `blake2` provides `Blake2b512` for the §3.5 BlakeGenerator's
# "S = Hash512(S)" rebuild step. Currently transitive via `argon2 →
# blake2` in `shekyl-pow-randomx`; promoted to direct dep here so the
# consumption surface is honest and unaffected if `argon2` later drops
# its `blake2` dep. Cargo unifies; no additional build cost.
blake2 = { version = "0.10", default-features = false }

# Phase 2g Rust/C differential harness primitives. See
# `docs/design/RANDOMX_V2_PHASE2G_PLAN.md` §3.16 R4-D1 (the
# implementation-correctness decision that pins these as workspace
# deps) and §5.1.15 (the consumption surface in
# `shekyl-randomx-differential`'s `Cargo.toml`). All three already
# exist in the lockfile as transitives; this section promotes them
# to direct workspace deps so the harness can reference them with
# `{ workspace = true }` without introducing new transitive edges.
# Lockfile-verified per `17-dependency-discipline.mdc`: sha2 0.10.9,
# rand_chacha 0.3.1, serde_json 1.0.149. The harness is the sole
# direct consumer; no other workspace member references these.
#
# `rand_chacha` provides `ChaCha20Rng` for the deterministic
# corpus-generation path per R1-D4 (32-byte seed produces a
# reproducible draw of `(seedhash, data)` pairs across runs;
# determinism is load-bearing for the corpus-coverage proof, per
# §4.6 M1). Pinned at `0.3` to match the lower of two lockfile
# entries (the workspace already pulls `0.3.1` transitively; the
# `0.9.0` entry comes from an unrelated leaf and stays where it
# is — Cargo unifies on the workspace pin without forcing a graph
# rewrite).
rand_chacha = "0.3"
#
# `sha2` provides `Sha256` for the R1-D14 cache-equivalence
# precondition: the Rust-derived `PreparedCache`'s 256 MiB
# Argon2d-fill memory is streamed through a `Sha256` hasher (via
# the §5.3.3 `test-internals`-gated visitor accessor) and the
# digest is compared against `SHA-256(randomx_get_cache_memory(c))`
# computed by the C reference. The digest output is public (a
# correctness fingerprint, not a secret); no `Zeroize`-on-Drop
# discipline applies per `35-secure-memory.mdc`. Hasher state
# does hold transient block residue but is dropped synchronously
# after the digest call; the harness's drop-discipline memory
# budget (§3.15.4) is preserved.
sha2 = "0.10"
#
# `serde_json` provides the failure-output JSON schema serializer
# per R1-D11 + T11. On byte-equality divergence the harness emits
# a structured JSON record to stderr enumerating the 11 required
# fields (seedhash, data, expected/actual hex, mode, worker_id,
# timestamp, etc. per §5.1.14); T11 (`src/failure_output.rs`'s
# `#[cfg(test)]` module) round-trips a synthetic divergence record
# through `serde_json::to_string` + `serde_json::from_str` and
# asserts all 11 fields are present in the parsed map.
serde_json = "1"

# Compile crypto-heavy crates with optimizations even in dev
[profile.dev.package]
subtle = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ff = { opt-level = 3 }
group = { opt-level = 3 }
crypto-bigint = { opt-level = 3 }
dalek-ff-group = { opt-level = 3 }
helioselene = { opt-level = 3 }
multiexp = { opt-level = 3 }
ec-divisors = { opt-level = 3 }
generalized-bulletproofs = { opt-level = 3 }
generalized-bulletproofs-circuit-abstraction = { opt-level = 3 }
generalized-bulletproofs-ec-gadgets = { opt-level = 3 }
full-chain-membership-proofs = { opt-level = 3 }
shekyl-io = { opt-level = 3 }
shekyl-generators = { opt-level = 3 }
shekyl-primitives = { opt-level = 3 }
shekyl-bulletproofs = { opt-level = 3 }
shekyl-fcmp-plus-plus = { opt-level = 3 }
shekyl-oxide = { opt-level = 3 }

[profile.dev]
panic = "abort"
overflow-checks = true
[profile.release]
panic = "abort"
overflow-checks = true
[profile.test]
overflow-checks = true
[profile.bench]
overflow-checks = true

[workspace.lints.clippy]
incompatible_msrv = "allow"
unwrap_or_default = "allow"
map_unwrap_or = "allow"
# Belt-and-braces for the `shekyl-logging::init(...)` footgun. The primary
# defense is `#[must_use]` on `LoggerGuard`, which fires on the common
# unbound shape `init(cfg)?;`. This lint catches only the narrower
# `let _ = init(cfg)?;` shape, which `#[must_use]` does not. See
# `rust/shekyl-logging/README.md` for the full defense hierarchy.
let_underscore_must_use = "deny"
borrow_as_ptr = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_ptr_alignment = "deny"
cast_sign_loss = "deny"
checked_conversions = "deny"
cloned_instead_of_copied = "deny"
enum_glob_use = "deny"
expl_impl_clone_on_copy = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
flat_map_option = "deny"
float_cmp = "deny"
fn_params_excessive_bools = "deny"
ignored_unit_patterns = "deny"
implicit_clone = "deny"
inefficient_to_string = "deny"
invalid_upcast_comparisons = "deny"
large_stack_arrays = "deny"
linkedlist = "deny"
macro_use_imports = "deny"
manual_instant_elapsed = "deny"
manual_let_else = "deny"
manual_ok_or = "deny"
manual_string_new = "deny"
match_bool = "deny"
match_same_arms = "deny"
missing_fields_in_debug = "deny"
needless_pass_by_value = "deny"
ptr_cast_constness = "deny"
range_minus_one = "deny"
range_plus_one = "deny"
redundant_closure_for_method_calls = "deny"
redundant_else = "deny"
string_add_assign = "deny"
unchecked_time_subtraction = "deny"
uninlined_format_args = "deny"
unnecessary_box_returns = "deny"
unnecessary_join = "deny"
unnecessary_wraps = "deny"
unnested_or_patterns = "deny"
unused_async = "deny"
unused_self = "deny"
zero_sized_map_values = "deny"
