# Copyright (c) 2025-2026, The Shekyl Foundation
#
# All rights reserved.
# BSD-3-Clause

[package]
name = "randomx-v2-sys"
description = "Hand-written extern \"C\" bindings for external/randomx-v2 (Phase 2g differential harness only)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# The build script lives at the crate root and is auto-discoverable
# by Cargo; the explicit `build = "build.rs"` declaration is for
# manifest-readability per the workspace convention established by
# `shekyl-engine-core`, `shekyl-economics`, and `shekyl-staking`.
build = "build.rs"

# Phase 2g R1-D2 (option (c) closed):
# This crate is a Shekyl-introduced `*-sys`-shaped sub-crate that owns
# the hand-written `extern "C"` declarations + the `build.rs` linker
# directives (added at C3 per §8.1) for `external/randomx-v2`'s
# 7-symbol cache + VM surface (R4-D4 enumeration). The sole consumer
# is `shekyl-randomx-differential` (lands at C4 per §8.1); per §5.2.3
# + §5.2.5 + R1-D13 disposition, no other workspace member may depend
# on this crate. T14 (§6.6) asserts the sole-consumer invariant
# mechanically via `cargo metadata`.
#
# Per §5.2.3 the crate has no `[dependencies]`, no `[dev-dependencies]`,
# and no `[build-dependencies]`. The `build.rs` (§5.2.2, soft-fail
# refinement per R5-D2 §3.17) emits
# `cargo:rustc-link-search=native={RANDOMX_V2_INSTALL_DIR}/lib` and
# `cargo:rustc-link-lib=static=randomx` (R4-D2: filename is
# `librandomx.a`, not `libshekyl_randomx_v2.a`); the env-var-unset
# branch emits a `cargo:warning=…` and returns cleanly so the rlib
# compiles under workspace-wide cargo invocations even before
# `RANDOMX_V2_INSTALL_DIR` is exported. No Rust deps beyond `std`
# are needed.

[package.metadata.shekyl]
# Per Phase 2g §5.2.4 + R1-D2 future-maintenance hardening. The
# `fork-pin-coupled = true` marker signals to T15 (§6.7) and to
# any future fork-pin-bump PR that this crate's `src/lib.rs`
# declarations are coupled to a specific upstream pin; any advance
# requires the 7-signature re-audit per R1-D2 reopening criterion.
# T15 asserts `fork-pin-sha` matches `external/randomx-v2`'s HEAD
# at per-PR cadence.
fork-pin-coupled = true
fork-pin-sha = "aaafe71322df6602c21a5c72937ac284724ae561"

# Workspace clippy lint set per `rust/Cargo.toml` lines 144-199;
# the FFI-declarations-only surface (no function bodies, no casts,
# no match arms) does not require per-crate `[lints.clippy]`
# overrides — verified at C1 close by `cargo clippy --workspace
# --all-targets --keep-going -- -D warnings`.
[lints]
workspace = true
