[package]
name = "shekyl-chacha"
description = "XChaCha20 stream cipher for Shekyl wallet encryption"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chacha20 = "0.9"
chacha20poly1305 = "0.10"
cipher = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = "1"

[dev-dependencies]
rand = "0.8"

[lints]
workspace = true
