[package]
name = "shekyl-chacha"
description = "XChaCha20 stream cipher for Shekyl wallet encryption"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# The `zeroize` feature forwards to `cipher/zeroize` and wipes the XChaCha20
# block-cipher state on drop rather than leaving keystream-derived material
# resident in process memory. Required per `35-secure-memory.mdc`'s
# structural-memwipe rule for the wallet-file region AEADs that consume this
# crate (Phase 0 Mission Audit Lens D D-13).
chacha20 = { version = "0.9", features = ["zeroize"] }
chacha20poly1305 = "0.10"
cipher = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = "1"

[dev-dependencies]
rand = "0.8"

[lints]
workspace = true
