[package]
name = "shekyl-crypto-pq"
description = "Post-quantum cryptographic primitives for Shekyl (ML-DSA, ML-KEM, hybrid signatures)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
helioselene = { path = "../shekyl-oxide/crypto/helioselene" }
ciphersuite = "0.4"
curve25519-dalek = "4"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
fips204 = "0.4.6"
# Pinned exact: fips203 uses DummyRng::fill_bytes = unimplemented!() internally;
# a minor-version bump could panic at runtime. Exact pin + KEM_DERIVE_V1_KAT.json
# tripwire + Cargo.lock = three layers of defense against silent behavior changes.
fips203 = "=0.4.3"
hkdf = "0.12"
sha2 = "0.10"
blake2 = "0.10"
# BIP-39 (English) mnemonic <-> entropy conversion and PBKDF2-HMAC-SHA512 seed
# derivation. We depend on rust-bitcoin's crate for its battle-tested handling
# of NFKD, checksum, and PBKDF2; the canonical English wordlist is additionally
# pinned by a KAT (see tests::bip39_english_wordlist_sha256_matches_canonical)
# which fails closed on any upstream drift.
#
# The `rand` feature would pull a transitive `rand` dependency; we do not use
# random-mnemonic generation (all entropy flows through OsRng in our own FFI)
# so we keep the feature set minimal.
bip39 = { version = "2.2.2", default-features = false, features = ["std"] }
shekyl-address = { path = "../shekyl-address" }
sha3 = "0.10"
# Wallet-file envelope (WALLET_FILE_FORMAT_V1).
#
# Argon2id is the OWASP 2024 recommended password-stretching primitive; we
# use it for the wrapped_kek layer so an attacker with a stolen .wallet.keys
# file must pay Argon2id's memory-hardness to brute-force the wrapping
# password. Features `alloc` enables the `Vec<u8>`-returning helpers; we
# don't use `password-hash` (PHC string format) because we embed our own
# KDF parameters in the wallet file header rather than in an external
# phc-string.
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
# XChaCha20-Poly1305 AEAD with a 192-bit nonce (chosen so per-write random
# nonces are collision-safe for the entire lifetime of a wallet file).
# Used for:
#   - the wrap AEAD that encrypts file_kek under the Argon2id-derived wrap_key
#   - the region 1 AEAD that encrypts the seed / capability content under file_kek
#   - the region 2 AEAD that encrypts the state JSON under file_kek
# All three AEADs use the same primitive; the distinctions are (key, nonce,
# AAD) tuples, never the cipher.
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
shekyl-crypto-hash = { path = "../shekyl-crypto-hash" }
shekyl-generators = { path = "../shekyl-oxide/shekyl-oxide/generators" }
# Typed wallet-state JSON ser/des (WALLET_FILE_FORMAT_V1 region 2). Versioned
# by `state_schema_version`; mismatched version refuses to load, never silently
# migrates. JSON field names are the wire format; see wallet_state.rs.
serde_json = "1"

[dev-dependencies]
hex = "0.4"
shekyl-fcmp = { path = "../shekyl-fcmp" }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "pqc_rederivation"
harness = false

[lints]
workspace = true
